Wed Jan 30 12:44:00 UTC 2013  Simon Massey  <simon dot massey at prismtech dot com>

        * tao/GIOP_Message_Base.cpp:
          Fix a memory leak of a datablock due to ZIOP decompression (possiably)
          replacing it. If replaced the original db may need to be released and
          the new db always does.

Tue Jan 29 11:00:00 UTC 2013  Simon Massey  <simon dot massey at prismtech dot com>

        * orbsvcs/tests/Miop/McastFragmentation/run_test.pl:
        * orbsvcs/tests/Miop/McastFragmentation/run_test_ipv6.pl:
        * orbsvcs/tests/Miop/McastFragmentation/client.cpp:
        * orbsvcs/tests/Miop/McastFragmentation/uipmc_client.conf:
        * orbsvcs/tests/Miop/McastFragmentation/uipmc_server.conf:
        * orbsvcs/tests/Miop/McastFragmentation/uipmc_server_n.conf:
        * orbsvcs/tests/Miop/McastFragmentation/uipmc_server_m.conf:
          Minor timing/tuning adjustments and updates.

Tue Jan 29 07:55:44 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * examples/Advanced/ch_21/client.cpp:
          One more compile fix when ostream is disabled

Mon Jan 28 18:51:42 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * examples/Advanced/ch_12/client.cpp:
        * examples/Advanced/ch_18/client.cpp:
        * examples/Advanced/ch_8_and_10/client.cpp:
          Fixed compile errors when ostream is disabled

Mon Jan 28 18:16:09 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO_IDL/be/be_sequence.cpp:
          Fixed compile error when using ostream and alternate mapping
          together

Mon Jan 28 12:44:24 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * examples/Advanced/ch_12/client.cpp:
        * examples/Advanced/ch_18/client.cpp:
        * examples/Advanced/ch_21/client.cpp:
        * examples/Advanced/ch_8_and_10/client.cpp:
          Fixed compile errors when ostream streaming is enabled
          in TAO_IDL

Mon Jan 28 11:26:06 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>
